--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/typeorm": "^6.1.3",
+    "@types/morgan": "^1.7.37",
     "dotenv": "^8.1.0",
+    "morgan": "^1.9.1",
     "mysql2": "^1.6.5",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
-    "typeorm": "^0.2.18"
+    "typeorm": "^0.2.18",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
@@ -41,6 +44,7 @@
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
     "@types/supertest": "^2.0.7",
+    "@types/winston": "^2.4.4",
     "concurrently": "^4.1.0",
     "jest": "^23.6.0",
     "nodemon": "^1.18.9",
