--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,13 @@
     "target": "es6",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
+    "baseUrl": "." /* Base directory to resolve non-absolute module names. */,
+    "paths": {
+      /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
+      "Src/*": [
+        "./src/*"
+      ] /* Even tough babel module resolver plugin is used. This is needed when type checking. */
+    },
     "incremental": true
   },
   "exclude": ["node_modules"]
