--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 NODE_ENV=development
 PORT=3000
 API_AUTH_ENABLED=true
+DB_TYPE=mysql
+DB_HOST=localhost
+DB_PORT=3306
+DB_USERNAME=root
+DB_PASSWORD=root
+DB_DATABASE=message_board
