--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.0",
     "dotenv": "^8.1.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "mysql2": "^1.6.5",
     "reflect-metadata": "^0.1.12",
@@ -46,6 +47,7 @@
     "@types/express": "^4.16.0",
     "@types/hapi__joi": "^15.0.3",
     "@types/jest": "^23.3.13",
+    "@types/jsonwebtoken": "^8.3.3",
     "@types/node": "^10.12.18",
     "@types/supertest": "^2.0.7",
     "@types/winston": "^2.4.4",
